--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,8 @@
 <nav>
 	<a class="nav-toggle" id="open-nav" href="#">&#9776;</a>
 	{% for link in site.data.navigation %}
+	<div class="menuitem">
+	
 		{% assign class = "" %}
 		{% if link.highlight %}
 			{% assign class = class | append: " highlight" %}
@@ -9,6 +11,17 @@
 		{% if link.link == page.url %}
 			{% assign class = class | append: " active" %}
 		{% endif %}
-		<a href="{% include relative-src.html src=link.link %}" class="{{ class }}" {% if link.new_window %}target="_blank"{% endif %}><i class="{{ link.icon }}"></i> {{ link.name }}</a>
+		<a href="{% include relative-src.html src=link.link %}" {% if link.new_window %}target="_blank"{% endif %}><i class="{{ link.icon }}"></i> {{ link.name }}</a>
+
+		{% if link.subitems != null %}
+			<ul class="submenu">
+			{% for subitem in link.subitems %}
+				<li class="subitem">
+					<a href="{% include relative-src.html src=subitem.link %}" class="{{ class }}" {% if subitem.new_window %}target="_blank"{% endif %}><i class="{{ subitem.icon }}"></i> {{ subitem.name }}</a>
+				</li>		
+			{% endfor %}
+			<ul>
+		{% endif %}
+	</div>
 	{% endfor %}
 </nav>
