--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
                 <nav class="navbar navbar-expand-lg">
 
                     <a class="navbar-brand" href="{{ '/' | absolute_url }}">
-                        <img src="{{ 'assets/images/logo.svg' | absolute_url }}" alt="Logo">
+                        <img src="{{ 'assets/images/logo/logo.svg' | absolute_url }}" style="width:64px;height:64px;" alt="Logo">
                     </a>
 
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTwo" aria-controls="navbarTwo" aria-expanded="false" aria-label="Toggle navigation">
