--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,34 +2,35 @@
 <html class="no-js" lang="en">
 
 <head>
-    <meta charset="utf-8">
 
-    <!--====== Title ======-->
-    <title>Smash - Bootstrap Business Template</title>
+<meta charset="utf-8">
 
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--====== Title ======-->
+<title>Smash - Bootstrap Business Template</title>
 
-    <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="{{ 'assets/images/favicon.png' | absolute_url }}" type="image/png">
+<meta name="description" content="">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--====== Magnific Popup CSS ======-->
-    <link rel="stylesheet" href="{{ 'assets/css/magnific-popup.css' | absolute_url }}">
+<!--====== Favicon Icon ======-->
+<link rel="shortcut icon" href="{{ 'assets/images/favicon.png' | absolute_url }}" type="image/png">
 
-    <!--====== Slick CSS ======-->
-    <link rel="stylesheet" href="{{ 'assets/css/slick.css' | absolute_url }}">
+<!--====== Magnific Popup CSS ======-->
+<link rel="stylesheet" href="{{ 'assets/css/magnific-popup.css' | absolute_url }}">
 
-    <!--====== Line Icons CSS ======-->
-    <link rel="stylesheet" href="{{ 'assets/css/LineIcons.css' | absolute_url }}">
+<!--====== Slick CSS ======-->
+<link rel="stylesheet" href="{{ 'assets/css/slick.css' | absolute_url }}">
 
-    <!--====== Bootstrap CSS ======-->
-    <link rel="stylesheet" href="{{ 'assets/css/bootstrap.min.css' | absolute_url }}">
+<!--====== Line Icons CSS ======-->
+<link rel="stylesheet" href="{{ 'assets/css/LineIcons.css' | absolute_url }}">
 
-    <!--====== Default CSS ======-->
-    <link rel="stylesheet" href="{{ 'assets/css/default.css' | absolute_url }}">
+<!--====== Bootstrap CSS ======-->
+<link rel="stylesheet" href="{{ 'assets/css/bootstrap.min.css' | absolute_url }}">
 
-    <!--====== Style CSS ======-->
-    <link rel="stylesheet" href="{{ 'assets/css/style.css' | absolute_url }}">
+<!--====== Default CSS ======-->
+<link rel="stylesheet" href="{{ 'assets/css/default.css' | absolute_url }}">
+
+<!--====== Style CSS ======-->
+<link rel="stylesheet" href="{{ 'assets/css/style.css' | absolute_url }}">
 
 </head>
 
@@ -50,6 +51,7 @@
 
 {{ content }}
 
+{% include footer.html %}
 
 <!--====== Jquery js ======-->
 <script src="assets/js/vendor/jquery-1.12.4.min.js"></script>
