--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,9 +9,13 @@ $gray: #f7f7fd;
 
 
 // Theme Color
-$primary-one: #0067f4;
+$primary-one: #886eb1;
 $primary-two: #deebfd;
 $primary-three: #005ad5;
+
+$slider-gradient-color1: rgba(65, 0, 244, 0.3);
+$slider-gradient-color2: rgba(105, 43, 220, 0.3);
+
 
 
 // Text Color
