--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -12,8 +12,8 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="slider-content">
-                            <h1 class="title">Game Engine for Kotlin</h1>
-                            <p class="text">Modern Multiplatform Game Engine.</p>
+                            <h1 class="title">KorGE</h1>
+                            <p class="text">Modern Multiplatform Game Engine for Kotlin.</p>
                             <ul class="slider-btn rounded-buttons">
                                 <li><a class="main-btn rounded-one" href="https://korlibs.soywiz.com/korge/setup/" target="_blank">GET STARTED</a></li>
                                 <li><a class="main-btn rounded-two" href="#">DOWNLOAD</a></li>
@@ -24,7 +24,7 @@
             </div> <!-- container -->
             <div class="slider-image-box d-none d-lg-flex align-items-end">
                 <div class="slider-image">
-                    <img src="assets/images/slider/1.png" alt="Hero">
+                    <img src="{{ carousel_item.image | absolute_url }}" alt="Hero" style="width: 700px;height:700px;">
                 </div> <!-- slider-imgae -->
             </div> <!-- slider-imgae box -->
         </div> <!-- carousel-item -->
