--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,6 @@
+---
+---
+
 /*-----------------------------------------------------------------------------------
 
     Template Name: Smash - Bootstrap Template
