--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,3 +1,7 @@
+<!--====== SLIDER PART START ======-->
+
+<section id="home" class="slider_area">
+
 <div id="carouselThree" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         {% for carousel_item in site.carousel %}
@@ -41,3 +45,7 @@
     </a>
     {% endif %}
 </div>
+
+</section>
+
+<!--====== SLIDER PART ENDS ======-->
