--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -19,12 +19,12 @@
 
                     <div class="collapse navbar-collapse sub-menu-bar" id="navbarTwo">
                         <ul class="navbar-nav m-auto">
-                            <li class="nav-item active"><a class="page-scroll" href="#home">home</a></li>
-                            <li class="nav-item"><a class="page-scroll" href="#features">Features</a></li>
-                            <li class="nav-item"><a class="page-scroll" href="#showcases">Showcases</a></li>
-                            <li class="nav-item"><a class="page-scroll" href="#testimonial">About</a></li>
-                            <li class="nav-item"><a class="page-scroll" href="#team">Team</a></li>
-                            <li class="nav-item"><a class="page-scroll" href="#contact">Contact</a></li>
+                            <li class="nav-item active"><a class="page-scroll" href="/#home">home</a></li>
+                            <li class="nav-item"><a class="page-scroll" href="/#features">Features</a></li>
+                            <li class="nav-item"><a class="page-scroll" href="/#showcases">Showcases</a></li>
+                            <li class="nav-item"><a class="page-scroll" href="/#testimonial">About</a></li>
+                            <li class="nav-item"><a class="page-scroll" href="/#team">Team</a></li>
+                            <li class="nav-item"><a class="page-scroll" href="/#contact">Contact</a></li>
                         </ul>
                     </div>
 
