--- a/_includes/showcases.html
+++ b/_includes/showcases.html
@@ -8,8 +8,10 @@
         <div class="row justify-content-center">
             <div class="col-lg-6 col-md-10">
                 <div class="section-title text-center pb-10">
-                    <h3 class="title">Featured Works</h3>
-                    <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
+                    <h3 class="title">Showcases</h3>
+                    <p class="text">
+                        Have a look to some games made using KorGE!
+                    </p>
                 </div> <!-- section title -->
             </div>
         </div> <!-- row -->
