--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,45 +41,37 @@
 
 {% include navbar.html %}
 
-<!--====== SLIDER PART START ======-->
-
-<section id="home" class="slider_area">
-    {% include carousel.html %}
-</section>
-
-<!--====== SLIDER PART ENDS ======-->
-
 {{ content }}
 
 {% include footer.html %}
 
 <!--====== Jquery js ======-->
-<script src="assets/js/vendor/jquery-1.12.4.min.js"></script>
-<script src="assets/js/vendor/modernizr-3.7.1.min.js"></script>
+<script src="{{ 'assets/js/vendor/jquery-1.12.4.min.js' | absolute_url }}"></script>
+<script src="{{ 'assets/js/vendor/modernizr-3.7.1.min.js' | absolute_url }}"></script>
 
 <!--====== Bootstrap js ======-->
-<script src="assets/js/popper.min.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
+<script src="{{ 'assets/js/popper.min.js' | absolute_url }}"></script>
+<script src="{{ 'assets/js/bootstrap.min.js' | absolute_url }}"></script>
 
 <!--====== Slick js ======-->
-<script src="assets/js/slick.min.js"></script>
+<script src="{{ 'assets/js/slick.min.js' | absolute_url }}"></script>
 
 <!--====== Magnific Popup js ======-->
-<script src="assets/js/jquery.magnific-popup.min.js"></script>
+<script src="{{ 'assets/js/jquery.magnific-popup.min.js' | absolute_url }}"></script>
 
 <!--====== Ajax Contact js ======-->
-<script src="assets/js/ajax-contact.js"></script>
+<script src="{{ 'assets/js/ajax-contact.js' | absolute_url }}"></script>
 
 <!--====== Isotope js ======-->
-<script src="assets/js/imagesloaded.pkgd.min.js"></script>
-<script src="assets/js/isotope.pkgd.min.js"></script>
+<script src="{{ 'assets/js/imagesloaded.pkgd.min.js' | absolute_url }}"></script>
+<script src="{{ 'assets/js/isotope.pkgd.min.js' | absolute_url }}"></script>
 
 <!--====== Scrolling Nav js ======-->
-<script src="assets/js/jquery.easing.min.js"></script>
-<script src="assets/js/scrolling-nav.js"></script>
+<script src="{{ 'assets/js/jquery.easing.min.js' | absolute_url }}"></script>
+<script src="{{ 'assets/js/scrolling-nav.js' | absolute_url }}"></script>
 
 <!--====== Main js ======-->
-<script src="assets/js/main.js"></script>
+<script src="{{ 'assets/js/main.js' | absolute_url }}"></script>
 
 </body>
 
