--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -12,6 +12,7 @@ $gray: #f7f7fd;
 $primary-one: #886eb1;
 $primary-two: #deebfd;
 $primary-three: #005ad5;
+$primary-four: #6e4fb6;
 
 $slider-gradient-color1: rgba(65, 0, 244, 0.3);
 $slider-gradient-color2: rgba(105, 43, 220, 0.3);
