--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,7 +7,7 @@
             <div class="col-lg-6 col-md-10">
                 <div class="section-title text-center pb-30">
                     <h3 class="title">Contact</h3>
-                    <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
+                    <p class="text">Want to ask related things to KorGE? Reach us in our public channels!</p>
                 </div> <!-- section title -->
             </div>
         </div> <!-- row -->
