--- a/_includes/features.html
+++ b/_includes/features.html
@@ -19,10 +19,10 @@
             <div class="col-lg-4 col-md-7 col-sm-9">
                 <div class="single-features mt-40">
                     <div class="features-title-icon d-flex justify-content-between">
-                        <h4 class="features-title"><a href="#">{{ feature.title }}</a></h4>
+                        <h4 class="features-title"><a href="{{ feature.url | absolute_url }}">{{ feature.title }}</a></h4>
                         <div class="features-icon">
                             <i class="lni {{ feature.icon }}"></i>
-                            <img class="shape" src="assets/images/f-shape-1.svg" alt="Shape">
+                            <img class="shape" src="{{ 'assets/images/f-shape-1.svg' | absolute_url }}" alt="Shape">
                         </div>
                     </div>
                     <div class="features-content">
