--- a/_includes/team.html
+++ b/_includes/team.html
@@ -7,7 +7,9 @@
             <div class="col-lg-6 col-md-10">
                 <div class="section-title text-center pb-30">
                     <h3 class="title">Meet The Team</h3>
-                    <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
+                    <p class="text">
+                        KorGE is developed by a few enthusiast people around the world!
+                    </p>
                 </div> <!-- section title -->
             </div>
         </div> <!-- row -->
