--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -7,14 +7,16 @@
             <div class="col-xl-5 col-lg-6">
                 <div class="testimonial-left-content mt-45">
                     <h6 class="sub-title">Testimonials</h6>
-                    <h4 class="title">What Clients Says <br> About Us</h4>
+                    <h4 class="title">What Users Says About Us</h4>
                     <ul class="testimonial-line">
                         <li></li>
                         <li></li>
                         <li></li>
                         <li></li>
                     </ul>
-                    <p class="text">Duis et metus et massa tempus lacinia. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas ultricies, orci molestie blandit interdum. <br> <br> ipsum ante pellentesque nisl, eget mollis turpis quam nec eros. ultricies, orci molestie blandit interdum.</p>
+                    <p class="text">
+                        KorGE is the result of two years of intense development. It is totally free and OpenSource. Hope you all enjoy it.
+                    </p>
                 </div> <!-- testimonial left content -->
             </div>
             <div class="col-lg-6">
