--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,9 @@
 <meta charset="utf-8">
 
 <!--====== Title ======-->
-<title>Smash - Bootstrap Business Template</title>
+<title>{{ site.title }}</title>
 
-<meta name="description" content="">
+<meta name="description" content="{{ site.description }}">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!--====== Favicon Icon ======-->
