Showcases now have targetLink property which contains the link which is directly targeted from the landingpage to decrease maintenance

--- a/_includes/showcases.html
+++ b/_includes/showcases.html
@@ -46,7 +46,7 @@
                                             <img src="{{ 'assets/images/portfolio/shape.svg' | absolute_url }}" alt="shape" class="shape">
                                         </div>
                                         <div class="portfolio-icon">
-                                            <a href="{{ post.url }}"><i class="lni lni-link"></i></a>
+                                            <a href="{{ post.targetLink }}"><i class="lni lni-link"></i></a>
                                             <img src="{{ 'assets/images/portfolio/shape.svg' | absolute_url }}" alt="shape" class="shape">
                                         </div>
                                     </div>
