Changed Download to Github

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -30,7 +30,7 @@
 
                     <div class="navbar-btn d-none d-sm-inline-block">
                         <ul>
-                            <li><a class="solid" href="{{ site.data.info.download }}">Download</a></li>
+                            <li><a class="solid" href="https://github.com/korlibs/korge">GitHub</a></li>
                         </ul>
                     </div>
                 </nav> <!-- navbar -->
