--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -24,19 +24,22 @@
                             <li class="nav-item"><a class="page-scroll" href="/#features">Features</a></li>
                             <li class="nav-item"><a class="page-scroll" href="/#showcases">Showcases</a></li>
                             <li class="nav-item"><a class="page-scroll" href="/#testimonial">About</a></li>
-                            <li class="nav-item"><a class="page-scroll" href="/#contact">Community</a></li>
+                            <li class="nav-item"><a class="page-scroll" href="/#contact">Community</a></li>                
                         </ul>
                     </div>
 
                     <div class="navbar-btn d-none d-sm-inline-block">
                         <ul>
                             <li><a class="solid" href="https://github.com/korlibs/korge">GitHub</a></li>
+                            <li><a class="solid" href="https://www.patreon.com/bePatron?u=38765401">Become a Patreon</a></li>
                         </ul>
                     </div>
+
                 </nav> <!-- navbar -->
             </div>
         </div> <!-- row -->
     </div> <!-- container -->
 </section>
+
 
 <!--====== NAVBAR TWO PART ENDS ======-->
