--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -93,7 +93,8 @@ $md:'only screen and (min-width: 768px) and (max-width: 991px)';
 $xs:'(max-width: 767px)';
 $sm: 'only screen and (min-width: 576px) and (max-width: 767px)';
 
-
+// Images
+$background_slider: '../../assets/images/slider/korge_universe_background.svg';
 
 
 
