--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -23,7 +23,7 @@
                             <li class="nav-item"><a class="page-scroll" href="https://blog.korge.org/">Blog</a></li>
                             <li class="nav-item"><a class="page-scroll" href="/#features">Features</a></li>
                             <li class="nav-item"><a class="page-scroll" href="/#showcases">Showcases</a></li>
-                            <li class="nav-item"><a class="page-scroll" href="/#testimonial">About</a></li>
+                            <li class="nav-item"><a class="page-scroll" href="https://korlibs.soywiz.com/korge/">Documentation</a></li>
                             <li class="nav-item"><a class="page-scroll" href="/#contact">Community</a></li>                
                         </ul>
                     </div>
@@ -31,7 +31,7 @@
                     <div class="navbar-btn d-none d-sm-inline-block">
                         <ul>
                             <li><a class="solid" href="https://github.com/korlibs/korge">GitHub</a></li>
-                            <li><a class="solid" href="https://www.patreon.com/bePatron?u=38765401">Become a Patreon</a></li>
+                            <li><a class="solid" href="https://www.patreon.com/bePatron?u=38765401">Patreon</a></li>
                         </ul>
                     </div>
 
