Changed primary color to something brighter

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,7 +9,8 @@ $gray: #f7f7fd;
 
 
 // Theme Color
-$primary-one: #886eb1;
+//$primary-one: #886eb1;
+$primary-one: #8602d0;
 $primary-two: #deebfd;
 $primary-three: #005ad5;
 $primary-four: #6e4fb6;
