--- a/_sass/_protfolio.scss
+++ b/_sass/_protfolio.scss
@@ -52,9 +52,8 @@
                 left: 0;
                 width: 100%;
                 height: 100%;
-                background: -webkit-linear-gradient(left, rgba(136, 110, 177, 1) 0%, rgba(136, 110, 177, 1) 100%);
-                background: -o-linear-gradient(left, rgba(136, 110, 177, 1) 0%, rgba(136, 110, 177, 1) 100%);
-                background: linear-gradient(to right, rgba(136, 110, 177, 1) 0%, rgba(136, 110, 177, 1) 100%);
+                background-color: $primary-one;
+               
                 z-index: -1;
                 opacity: 0;
                 @include transition(0.3s);
