--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -30,8 +30,8 @@
 
                     <div class="navbar-btn d-none d-sm-inline-block">
                         <ul>
-                            <li><a class="solid" href="https://github.com/korlibs/korge">GitHub</a></li>
-                            <li><a class="solid" href="https://www.patreon.com/bePatron?u=38765401">Patreon</a></li>
+                            <li><a class="solid" href="https://github.com/korlibs/korge"><i class="lni lni-github"></i> GitHub</a></li>
+                            <li><a class="solid" href="https://www.patreon.com/bePatron?u=38765401"><i class="lni lni-patreon"></i> Patreon</a></li>
                         </ul>
                     </div>
 
