--- a/_sass/_team.scss
+++ b/_sass/_team.scss
@@ -40,9 +40,7 @@
             height: 100%;
             top: 0;
             left: 0;
-            background: -webkit-linear-gradient(left, rgba(0,103,244,1) 0%, rgba(43,219,220,1) 100%);
-            background: -o-linear-gradient(left, rgba(0,103,244,1) 0%, rgba(43,219,220,1) 100%);
-            background: linear-gradient(to right, rgba(0,103,244,1) 0%, rgba(43,219,220,1) 100%);
+            background-color: $primary_one;
             z-index: -1;
             @include transition(0.3s);
             opacity: 0;
