Split up contacts section and added proper icons

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -27,6 +27,7 @@
                                 {% if person.links.twitter %}<li><a href="{{ person.links.twitter }}"><i class="lni lni-twitter-original"></i></a></li>{% endif %}
                                 {% if person.links.linkedin %}<li><a href="{{ person.links.linkedin }}"><i class="lni lni-linkedin-original"></i></a></li>{% endif %}
                                 {% if person.links.instagram %}<li><a href="{{ person.links.instagram }}"><i class="lni lni-instagram"></i></a></li>{% endif %}
+                                {% if person.links.github %}<li><a href="{{ person.links.github }}"><i class="lni lni-github"></i></a></li>{% endif %}
                             </ul>
                         </div>
                         <h4 class="team-name"><a href="#">{{ person.name }}</a></h4>
