--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -56,9 +56,10 @@ p{
         }
         & .contact-info-content{
             padding-left: 20px;
-            
+            padding-top: 12px;
             & .text{
                 color: $text-color-one;
+
             }
         }
         
