--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -29,7 +29,7 @@
             </div> <!-- container -->
             <div class="slider-image-box d-none d-lg-flex align-items-end">
                 <div class="slider-image">
-                    <img src="{{ carousel_item.image | absolute_url }}" alt="Hero" style="width: 400px;height:500px;transform: translate(-50%)">
+                    <img src="{{ carousel_item.image | absolute_url }}" alt="Hero" style="width: 244px;height:430px;">
                 </div> <!-- slider-imgae -->
             </div> <!-- slider-imgae box -->
         </div> <!-- carousel-item -->
