--- a/_sass/_slider.scss
+++ b/_sass/_slider.scss
@@ -61,7 +61,7 @@
         & .slider-image {
             max-width: 680px;
             width: 100%;
-
+            transform: translate(45%, -40%);
             & img {}
         }
     }
