--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -11,7 +11,7 @@
 
     <div class="carousel-inner">
         {% for carousel_item in site.carousel %}
-        <div class="carousel-item {% if forloop.first %}active{% else %}{% endif %}">
+        <div class="carousel-item {% if forloop.first %}active{% else %}{% endif %}" style="background-attachment: fixed;">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
