--- a/_includes/features.html
+++ b/_includes/features.html
@@ -10,7 +10,7 @@
             <div class="col-lg-6 col-md-10">
                 <div class="section-title text-center pb-10">
                     <h3 class="title">Features</h3>
-                    <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
+                    <p class="text"></p>
                 </div> <!-- row -->
             </div>
         </div> <!-- row -->
