--- a/_sass/_slider.scss
+++ b/_sass/_slider.scss
@@ -13,7 +13,7 @@
 
 .carousel-item {
     # background-color: $primary-one;
-    background-image: url($background_slider);
+    background-image: #fff;
     background-repeat: repeat-x;
     background-size: 3000px;
     position: relative;
