--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,10 +21,11 @@
                         <ul class="navbar-nav m-auto">
                             <li class="nav-item active"><a class="page-scroll" href="/#home">home</a></li>
                             <li class="nav-item"><a class="page-scroll" href="https://blog.korge.org/">Blog</a></li>
+							<li class="nav-item"><a class="page-scroll" href="/#action">Action</a></li>
                             <li class="nav-item"><a class="page-scroll" href="/#features">Features</a></li>
                             <li class="nav-item"><a class="page-scroll" href="/#showcases">Showcases</a></li>
-                            <li class="nav-item"><a class="page-scroll" href="https://korlibs.soywiz.com/korge/">Documentation</a></li>
-                            <li class="nav-item"><a class="page-scroll" href="/#contact">Community</a></li>                
+                            <li class="nav-item"><a class="page-scroll" href="https://korlibs.soywiz.com/korge/">Docs</a></li>
+                            <li class="nav-item"><a class="page-scroll" href="/#contact">Community</a></li>
                         </ul>
                     </div>
 
