--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -24,7 +24,7 @@
 							<li class="nav-item"><a class="page-scroll" href="/#action">Action</a></li>
                             <li class="nav-item"><a class="page-scroll" href="/#features">Features</a></li>
                             <li class="nav-item"><a class="page-scroll" href="/#showcases">Showcases</a></li>
-                            <li class="nav-item"><a class="page-scroll" href="https://korlibs.soywiz.com/korge/">Docs</a></li>
+                            <li class="nav-item"><a class="page-scroll" href="https://korlibs.soywiz.com/korge/">Documentation</a></li>
                             <li class="nav-item"><a class="page-scroll" href="/#contact">Community</a></li>
                         </ul>
                     </div>
@@ -32,7 +32,9 @@
                     <div class="navbar-btn d-none d-sm-inline-block">
                         <ul>
                             <li><a class="solid" href="https://github.com/korlibs/korge"><i class="lni lni-github"></i> GitHub</a></li>
+							<!--
                             <li><a class="solid" href="https://www.patreon.com/korgegameengine"><i class="lni lni-patreon"></i> Patreon</a></li>
+                            -->
                         </ul>
                     </div>
 
