--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -54,44 +54,36 @@
 
 <!--====== SLIDER PART ENDS ======-->
 <script type="text/javascript">
-                        const versionVersion = "V1"
-                        const versionTimeLocalStorageKey = `versionCacheTime${versionVersion}`;
-                        const versionLocalStorageKey = `version${versionVersion}`;
+	const versionVersion = "V1"
+	const versionTimeLocalStorageKey = `versionCacheTime${versionVersion}`;
+	const versionLocalStorageKey = `version${versionVersion}`;
 
-                        function updateVersion() {
-                            let version = localStorage.getItem(versionLocalStorageKey).replace(/^v/, '');
-                            const lastKnownVersion = 'v2.0.0.2'
-                            let rversion = (version == 'vundefined' || version == 'undefined') ? lastKnownVersion : (version || lastKnownVersion);
-                            rversion = `${rversion}`.replace(/^v/, '');
-                            document.getElementById('version').innerText = `v${rversion}`;
-                        }
+	function updateVersion() {
+		let version = localStorage.getItem(versionLocalStorageKey).replace(/^v/, '');
+		const lastKnownVersion = 'v2.4.0'
+		let rversion = (version == 'vundefined' || version == 'undefined') ? lastKnownVersion : (version || lastKnownVersion);
+		rversion = `${rversion}`.replace(/^v/, '');
+		document.getElementById('version').innerText = `v${rversion}`;
+	}
 
-                        updateVersion();
+	updateVersion();
 
-                        async function fetchJson(url) {
-                            let data = await fetch(url);
-                            let json = await data.json();
-                            return json;
-                        }
+	async function fetchJson(url) {
+		let data = await fetch(url);
+		let json = await data.json();
+		return json;
+	}
 
-                        async function doDynamic() {
-                            let versionCacheTime = localStorage.getItem(versionTimeLocalStorageKey);
-                            if (!versionCacheTime || ((Date.now() - versionCacheTime) > 24 * 3600 * 1000)) {
+	async function doDynamic() {
+		let versionCacheTime = localStorage.getItem(versionTimeLocalStorageKey);
+		if (!versionCacheTime || ((Date.now() - versionCacheTime) > 24 * 3600 * 1000)) {
 
-                                try {
-                                    let data = await fetchJson("https://korlibs-api.soywiz.com/versions/korge-plugins");
-                                    console.log(data);
-                                    localStorage.setItem(versionTimeLocalStorageKey, Date.now());
-                                    localStorage.setItem(versionLocalStorageKey, 'v' + data.version.replace(/^release-/, ''));
-                                    updateVersion();
-                                } catch (e) {
-                                    let data = await fetchJson("https://api.github.com/repos/korlibs/korge-plugins/releases/latest");
-                                    console.log(data);
-                                    localStorage.setItem(versionTimeLocalStorageKey, Date.now());
-                                    localStorage.setItem(versionLocalStorageKey, 'v' + data.tag_name.replace(/^release-/, ''));
-                                    updateVersion();
-                                }
-                            }
-                        }
-                        doDynamic();
-                    </script>
+			let data = await fetchJson("https://api.github.com/repos/korlibs/korge-next/releases/latest");
+			console.log(data);
+			localStorage.setItem(versionTimeLocalStorageKey, Date.now());
+			localStorage.setItem(versionLocalStorageKey, 'v' + data.tag_name.replace(/^(release|v)-/, ''));
+			updateVersion();
+		}
+	}
+	doDynamic();
+</script>
