Some updates and fixes

--- a/_sass/_slider.scss
+++ b/_sass/_slider.scss
@@ -12,7 +12,7 @@
 }
 
 .carousel-item {
-    # background-color: $primary-one;
+    background-color: $primary-one;
     background-image: url($background_slider);
     background-repeat: repeat-x;
     background-size: 3000px;
