--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -23,6 +23,7 @@
                             <li class="nav-item"><a class="page-scroll" href="https://blog.korge.org/">Blog</a></li>
 							<li class="nav-item"><a class="page-scroll" href="/#action">Action</a></li>
                             <li class="nav-item"><a class="page-scroll" href="/#features">Features</a></li>
+							<li class="nav-item"><a class="page-scroll" href="https://jam.korge.org/" style="color:yellow;text-transform: none">🏆&nbsp;2nd&nbsp;GameJAM</a></li>
                             <li class="nav-item"><a class="page-scroll" href="/#showcases">Showcases</a></li>
                             <li class="nav-item"><a class="page-scroll" href="https://korlibs.soywiz.com/korge/">Documentation</a></li>
                             <li class="nav-item"><a class="page-scroll" href="/#contact">Community</a></li>
