--- a/_includes/show.html
+++ b/_includes/show.html
@@ -10,7 +10,7 @@
             </div>
         </div> <!-- row -->
         <div class="row justify-content-center">
-			<iframe src="https://show.korge.org/" width="100%" style="height: 600px; min-height: 50vh;"></iframe>
+			<iframe src="https://show.korge.org/" style="width: 100vw;height: 600px; min-height: 50vh;border:0;padding:0;margin:0;"></iframe>
         </div> <!-- row -->
     </div> <!-- container -->
 </section>
