--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -32,7 +32,7 @@
 
                     <div class="navbar-btn d-none d-sm-inline-block">
                         <ul>
-                            <li><a class="solid" href="https://github.com/korlibs/korge"><i class="lni lni-github"></i> GitHub</a></li>
+                            <li><a class="solid" href="https://github.com/korlibs/korge"><i class="lni lni-github"></i>&nbsp;GitHub</a></li>
 							<!--
                             <li><a class="solid" href="https://www.patreon.com/korgegameengine"><i class="lni lni-patreon"></i> Patreon</a></li>
                             -->
