--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -23,7 +23,7 @@
                             <li class="nav-item"><a class="page-scroll" href="https://blog.korge.org/">Blog</a></li>
 							<li class="nav-item"><a class="page-scroll" href="/#action">Action</a></li>
                             <li class="nav-item"><a class="page-scroll" href="/#features">Features</a></li>
-							<li class="nav-item"><a class="page-scroll" href="https://jam.korge.org/" target="_blank" style="color:yellow;text-transform: none">🏆&nbsp;2nd&nbsp;GameJAM</a></li>
+							<li class="nav-item"><a class="page-scroll" href="https://jam.korge.org/" target="_blank" style="color:yellow;text-transform: none;text-shadow: 0 0 5px #000">🏆&nbsp;2nd&nbsp;GameJAM</a></li>
                             <li class="nav-item"><a class="page-scroll" href="/#showcases">Showcases</a></li>
                             <li class="nav-item"><a class="page-scroll" href="https://docs.korge.org/korge/">Documentation</a></li>
                             <li class="nav-item"><a class="page-scroll" href="/#contact">Community</a></li>
@@ -32,7 +32,7 @@
 
                     <div class="navbar-btn d-none d-sm-inline-block">
                         <ul>
-                            <li><a class="solid" href="https://github.com/korlibs/korge"><i class="lni lni-github"></i>&nbsp;GitHub</a></li>
+                            <li><a class="solid" href="https://github.com/korlibs/korge" style="white-space: nowrap;"><i class="lni lni-github"></i>&nbsp;GitHub</a></li>
 							<!--
                             <li><a class="solid" href="https://www.patreon.com/korgegameengine"><i class="lni lni-patreon"></i> Patreon</a></li>
                             -->
