--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -95,6 +95,6 @@ $xs:'(max-width: 767px)';
 $sm: 'only screen and (min-width: 576px) and (max-width: 767px)';
 
 // Images
-$background_slider: '../../assets/images/slider/background.svg';
+$background_slider: '../../assets/images/slider/bg2-full.webp';
 
 
