--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,8 @@
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
 <![endif]-->
 
+{% include analytics.html %}
+
 {% include navbar.html %}
 
 {{ content }}
