--- a/_includes/features.html
+++ b/_includes/features.html
@@ -11,6 +11,7 @@
         transform: perspective(4000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1);
         box-shadow: rgba(15, 102, 116, 0.45) 0 0 5px;
         transition: transform .5s, box-shadow 1s;
+        overflow: hidden;
     }
     .single-features:hover {
         box-shadow: rgba(15, 102, 116, 0.17) 0 0 45px;
