--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -32,7 +32,7 @@
                         </ul>
                     </div>
 
-                    <div class="navbar-btn d-none d-sm-inline-block">
+                    <div class="navbar-btn d-inline-block">
                         <ul>
                             <li><a class="solid" href="https://github.com/korlibs/korge" style="white-space: nowrap;"><i class="lni lni-github"></i>&nbsp;GitHub</a></li>
 							<!--
